added a new post

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,16 @@
 				  			<h4>Recent Activity</h4>
 				  			<hr />
 				  			<div class="row">
+				  				<div class="columns large-9">
+				  					<h6>Hortense Verspyck</h6>
+				  					<p>Bung, biere de garde bottle conditioning pint glass. wort chiller primary fermentation dunkle pub brewpub?</p>
+				  				</div>
+				  				<div class="columns large-3">
+				  					<img src="img/user1.jpg">
+				  				</div>
+				  				<hr />
+				  			</div>
+				  			<div class="row">
 				  				<div class="columns large-3">
 				  					<img src="img/user3.jpg">
 				  				</div>
